testsuite/tests/properties/invalid_then/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- Example("example" ?name)
    name <- Name(@identifier)
}
